# splitbot

./: .envrc  .gitignore  .pre-commit-config.yaml  ChangeLog.md  Dockerfile-release  Makefile  README.md  brittany.yaml  ci-shell.nix  default.nix  devenv.nix  docker-compose.yml  docker_image.nix  fourmolu.yaml  package.yaml  pkgs.nix  shell.nix  splitbot.cabal  stack.yaml
.circleci/: check-fourmolu.sh  config.yml
app/: Main.hs
app/polling/: Main.hs
app/server/: Main.hs
db/migrate/: 20180804182843-create-expenses.sql
linux/: Dockerfile-build  Dockerfile-release  stack.yml
nix/: builder.sh  docker_image.nix  ghc.nix  haskell-app.nix  pkgs.nix  release.nix  sources.json  splitbot.nix
src/: Conversation.hs  Core.hs  Currency.hs  Effectful.hs  LocalDB.hs  LocalStore.hs  Migrations.hs  OpenAI.hs  Queue.hs  Runtime.hs  Server.hs  Settings.hs  Splitwise.hs  Storage.hs  Telegram.hs  Worker.hs  prompt.dhall
src/Conversation/: BasicEngine.hs  Engine.hs  Expense.hs  OpenAIEngine.hs  Outcome.hs  Parameters.hs  Replies.hs
src/Conversation/Engines/: Basic.hs  GPT.hs  prompt.dhall
src/Conversation/Parameters/: Amount.hs  Confirmation.hs  Definitions.hs  Description.hs  Payer.hs  Split.hs  Who.hs
src/Core/: Conversation.hs
src/Splitwise/: Api.hs
src/Splitwise/Api/: Balance.hs  GetBalanceResponse.hs
src/Telegram/: Api.hs  LongPolling.hs  Message.hs  Reply.hs  Username.hs  WebhookServer.hs
src/Telegram/Api/: GetUpdates.hs  SendMessage.hs  Update.hs
src/Worker/: Model.hs  Session.hs
