cabal-version:      2.4
name:               splitbot
version:            0.1.0.0

-- A short (one-line) description of the package.
--
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         jedi11235@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    ChangeLog.md
    README.md

executable splitbot
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
                    , bytestring
                    , containers
                    , dhall
                    , http-types
                    , http-client
                    , http-client-tls
                    , aeson
                    , trifecta
                    , text
                    , wai-extra
                    , mtl
                    , stm
                    , scotty
                    , async
                    , filepath
                    , directory
    hs-source-dirs:   app, src
    other-modules: Conversation
                ,  Conversation.Outcome
                ,  Conversation.Engines.Basic
                ,  Conversation.Engines.GPT
                ,  Conversation.Expense
                ,  Core
                ,  Currency
                ,  LocalStore
                ,  OpenAI
                ,  Queue
                ,  Runtime
                ,  Settings
                ,  Splitwise
                ,  Splitwise.Api
                ,  Splitwise.Api.Balance
                ,  Splitwise.Api.GetBalanceResponse
                ,  Telegram
                ,  Telegram.Api
                ,  Telegram.Api.GetUpdates
                ,  Telegram.Api.SendMessage
                ,  Telegram.Api.Update
                ,  Telegram.LongPolling
                ,  Telegram.Message
                ,  Telegram.Reply
                ,  Telegram.Username
                ,  Telegram.WebhookServer
    default-language: Haskell2010
    default-extensions:  OverloadedStrings
                       , DeriveGeneric
